<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".sign.ProductSignActivity">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height2"
        android:paddingTop="@dimen/title_padding">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/DIMEN_24dp"
                android:layout_height="@dimen/DIMEN_24dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/close_three"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="添加商品"
                android:textSize="17sp"
                android:textColor="#E6000000"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textStyle="bold"/>

        </RelativeLayout>

    </LinearLayout>

    <com.shunlai.ui.ListenerScrollView
        android:id="@+id/sl_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_below="@id/ll_title"
        android:layout_above="@id/ll_wish">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_search"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/product_search_bg2"
                android:gravity="center_vertical"
                android:onClick="goSearch"
                android:paddingLeft="9dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/search_icon2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/hint_product_search"
                    android:textColor="#999999"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_clip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/tv_clip"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/black_radius_24_bg"
                    android:gravity="center"
                    android:paddingLeft="17dp"
                    android:paddingRight="17dp"
                    android:text="@string/clip_text"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_search" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_product_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        </LinearLayout>
    </com.shunlai.ui.ListenerScrollView>


    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/gray_radius_24_bg"
        android:gravity="center"
        android:text="@string/complete_text"
        android:textStyle="bold"
        android:textColor="#999999"
        android:textSize="16sp"
        android:onClick="doComplete"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@drawable/shadow_sign_bg"
        android:layout_above="@id/ll_wish"/>
    <LinearLayout
        android:id="@+id/ll_wish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_complete"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_goods_text"
            android:textColor="#999999"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_go_wish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wish_text"
            android:textColor="#0d0d0d"
            android:textSize="13sp"
            android:textStyle="bold"
            android:onClick="goWish"/>
    </LinearLayout>

</RelativeLayout>
