<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7">
    <com.shunlai.ui.ListenerScrollView
        android:id="@+id/sl_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginBottom="100dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_page_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/publish_title"
                android:textColor="#0D0D0D"
                android:textSize="32dp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <EditText
                    android:id="@+id/et_ugc_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textColor="#0D0D0D"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/hint_title"
                    android:maxLength="15"/>
                <TextView
                    android:id="@+id/tv_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="11sp"
                    android:textColor="#B5B5B5"
                    android:text="0/15"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#F2F2F2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <EditText
                android:id="@+id/et_ugc_content"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@null"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_content"
                android:gravity="top|left"
                android:textSize="14sp"
                android:maxLength="1000"
                android:inputType="text"
                android:imeOptions="actionSend"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <TextView
                    android:id="@+id/tv_content_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0/1000"
                    android:textSize="11sp"
                    android:textColor="#B5B5B5"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#F2F2F2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <TextView
                    android:id="@+id/tv_add_hua_ti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="#添加话题"
                    android:textColor="#B2B2B2"
                    android:textSize="14sp"/>
                <LinearLayout
                    android:id="@+id/ll_hua_ti"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:paddingLeft="8dp"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:background="@drawable/black_radius_12_bg"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/tv_ht_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="#漫画里最让人心旷神怡的角色"
                        android:textColor="@color/white" />
                    <RelativeLayout
                        android:id="@+id/ll_delete_ht"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingRight="8dp"
                        android:paddingLeft="8dp">
                        <ImageView
                            android:id="@+id/iv_delete_ht"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:src="@mipmap/black_close"
                            android:background="@drawable/gray_oval_bg"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>


                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F2F2F2"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
            <com.shunlai.ui.EnlargedRecyclerView
                android:id="@+id/rv_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginRight="52dp"
                android:layout_marginTop="25dp"
                android:visibility="visible"
                />
            <com.shunlai.ui.EnlargedRecyclerView
                android:id="@+id/rv_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="25dp"/>

        </LinearLayout>
    </com.shunlai.ui.ListenerScrollView>

    <TextView
        android:layout_alignParentBottom="true"
        android:id="@+id/tv_publish"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/black_radius_2_bg"
        android:text="发布笔记"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

</RelativeLayout>
